--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Checkfumi</string>
+    <string name="play_button">Jouer</string>
+    <string name="tutorial_button">Tutoriel</string>
+    <string name="desc">Logo</string>
 </resources>
